/*
 * Copyright (c) 2018.
 * Code written by Alexis LEBEL (aka Alestrio)
 *
 */

package com.alestrio.isotope.database;

public enum PriceCount_type {

    CUBICCM(),
    SQUARECM(),
    UNIT();

    private int i;

    PriceCount_type(){

    }
}
