@startuml

title __DATABASE's Class Diagram__\n

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      enum DB_TYPE {
        INTEG
        TEXT
        NUMERIC
        SERIAL
        s
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class Database {
          # name : String
          # columns : List<DbColumn>
          - tableM : TableView<Material>
          - modifyButton : Button
          - delButton : Button
          - duplButton : Button
          - totalValueButton : Button
          + setPct()
          + Database()
          + setColumns()
          + getName()
          + setName()
          + getColumns()
          + addColumn()
          + addDb()
          - createColumnsFx()
          + getDatabaseUiElements()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class DbColumn {
          - name : String
          - tc : TableColumn
          - value : String
          + tf : TextField
          + getValue()
          + setValue()
          + getName()
          + setName()
          + getDbt()
          + setDbt()
          ~ DbColumn()
          + getTableColumn()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class DbItem {
          {static} # add()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class DbItemProperty {
          - name : String
          - integerProperty : SimpleIntegerProperty
          - doubleProperty : SimpleDoubleProperty
          - simpleStringProperty : SimpleStringProperty
          - whichProperty : int
          - DbItemProperty()
          ~ DbItemProperty()
          ~ DbItemProperty()
          ~ DbItemProperty()
          + getProperty()
          + getName()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      enum PriceCount_type {
        CUBICCM
        SQUARECM
        UNIT
        i
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class XmlHandler {
          - node : String
          - aldb : ArrayList<Database>
          + startDocument()
          + endDocument()
          + startElement()
          + getArrayOfDatabases()
      }
    }
  }
  

  package com.alestrio.isotope {
    package com.alestrio.isotope.database {
      class XmlSettings {
          - DBList : ArrayList<Database>
          {static} - handler : XmlHandler
          {static} + parseFile()
      }
    }
  }
  

  Database o-- DB : db
  Database o-- PriceCount_type : pct
  DbColumn o-- DB_TYPE : dbt
  DbItem -up-|> Database
  XmlHandler -up-|> DefaultHandler
  XmlHandler o-- Database : db
  XmlSettings o-- Database : db


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
